[package]
name = "advent-2018"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
ndarray = "0.15.6"
pathfinding = "3.0.14"
regex = "1.6.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
test-case = "2.2.2"
